05-22-add-answer-post

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -11,4 +11,20 @@
   Content: <br>
   <%= @question.content %>
 </p>
+
+<h2>Add an answer</h2>
+<%= form_with model: [@question, @question.answers.build] do |form| %>
+  <div>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
+  </div>
+  <div>
+    <%= form.label :content %>
+    <%= form.text_area :content %>
+  </div>
+  <div>
+    <%= form.submit %>
+  </div>
+<% end %>
+
 <%= link_to 'top', questions_path %>
