--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -22,6 +22,10 @@
     Content: <br>
     <%= answer.content %>
   </p>
+  <p>
+  <%= link_to 'Destroy Answer', [answer.question, answer],
+  data: { turbo_method: 'delete', turbo_confirm: 'Are you sure?'} %>
+  </p>
 <% end %>
 
 <h2>Add an answer</h2>
